--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <meta property="og:title" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly" />
   <meta property="og:type" content="website" /> 
+  <meta property="og:image" content="./imgs/header.png" /> 
   <meta property="og:site_name" content="詳説 お蔵入り - O&#x27;Creilly" />
   <meta property="og:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
 
