Fix og:image URL

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <meta property="og:title" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly" />
   <meta property="og:type" content="website" /> 
-  <meta property="og:image" content="./imgs/header.png" /> 
+  <meta property="og:image" content="http://ocreilly.meiji-ncc.tech/imgs/header.png" /> 
   <meta property="og:site_name" content="詳説 お蔵入り - O&#x27;Creilly" />
   <meta property="og:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
 
@@ -102,7 +102,7 @@
   <!-- ここから Index ページ -->
 
   <section id="header-image">
-    <div class="header-image-content" style="background-image:url('./imgs/header.png');"></div>
+    <div class="header-image-content" style="background-image:url('http://ocreilly.meiji-ncc.tech/imgs/header.png');"></div>
     <div class="header-image-mask"></div>
   </section>
 
