--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
      
         <ul class="social-buttons">
           <li class="social-button">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-hashtags="C89" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
             <script>
               ! function(d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0],
