--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
     })();
   </script>
 
-  <script src="http://jsoon.digitiminimi.com/js/widgetoon.js"></script>
-
   <style>
     .list .author {
       color: #9da3af;
@@ -272,7 +270,8 @@
   </footer>
 
   <script src="//sanographix.github.io/public/tumblr/tokusetsu2/js/tokusetsu2-js.min.js"></script>
-
+  <script src="http://jsoon.digitiminimi.com/js/widgetoon.js"></script>
+  <script> widgetoon_main(); </script>
 </body>
 
 </html>
