--- a/index.html
+++ b/index.html
@@ -149,19 +149,7 @@
      
         <ul class="social-buttons">
           <li class="social-button">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-hashtags="C89" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
-            <script>
-              ! function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0],
-                  p = /^http:/.test(d.location) ? 'http' : 'https';
-                if (!d.getElementById(id)) {
-                  js = d.createElement(s);
-                  js.id = id;
-                  js.src = p + '://platform.twitter.com/widgets.js';
-                  fjs.parentNode.insertBefore(js, fjs);
-                }
-              }(document, 'script', 'twitter-wjs');
-            </script>
+            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-hashtags="C89" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
           </li>
            
           <li class="social-button">
@@ -271,7 +259,21 @@
 
   <script src="//sanographix.github.io/public/tumblr/tokusetsu2/js/tokusetsu2-js.min.js"></script>
   <script src="http://jsoon.digitiminimi.com/js/widgetoon.js"></script>
-  <script> widgetoon_main(); </script>
+  <script>
+    if (window.widgetoon_main) widgetoon_main();
+    else {
+      !function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0],
+          p = /^http:/.test(d.location) ? 'http' : 'https';
+        if (!d.getElementById(id)) {
+          js = d.createElement(s);
+          js.id = id;
+          js.src = p + '://platform.twitter.com/widgets.js';
+          fjs.parentNode.insertBefore(js, fjs);
+        }
+      }(document, 'script', 'twitter-wjs');
+    }
+  </script>
 </body>
 
 </html>
