--- a/index.html
+++ b/index.html
@@ -57,10 +57,6 @@
     .list .website {
       margin-top: 5px;
     }
-    [id^="twitter-widget"] {
-      border: 1px rgb(137, 191, 224) solid;
-      border-radius: 3px;
-    }
   </style>
 </head>
 
@@ -149,7 +145,7 @@
      
         <ul class="social-buttons">
           <li class="social-button">
-            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-hashtags="C89" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="vertical" data-hashtags="C89" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
           </li>
            
           <li class="social-button">
