--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
      
         <ul class="social-buttons">
           <li class="social-button">
-            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="C89" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="C89" data-text="O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
           </li>
            
           <li class="social-button">
