--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <section id="spec" class="section">
       <div class="content">
-        <h2>詳説 お蔵入り</h2>
+        <h2>詳説 お蔵入り 第1版</h2>
         <p class="introduction">
           本書『詳説 お蔵入り』は，
 ブログなどに書きそびれて
