--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り</title>
+  <title>O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り 第1版</title>
   <meta name="description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します" />
   <meta name="viewport" content="width=device-width">
 
-  <meta property="og:title" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly" />
+  <meta property="og:title" content="詳説 お蔵入り 第1版 - C89 3日目 東ム51b - O&#x27;Creilly" />
   <meta property="og:type" content="website" /> 
   <meta property="og:image" content="http://ocreilly.meiji-ncc.tech/imgs/header.png" /> 
-  <meta property="og:site_name" content="詳説 お蔵入り - O&#x27;Creilly" />
+  <meta property="og:site_name" content="詳説 お蔵入り 第1版 - O&#x27;Creilly" />
   <meta property="og:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
 
   <link rel="stylesheet" href="//sanographix.github.io/public/tumblr/tokusetsu2/css/style.css" />
@@ -77,7 +77,7 @@
   <header id="globalheader">
     <div class="globalheader-inner content">
       <h1>
-        <a href="/">詳説 お蔵入り</a>
+        <a href="/">詳説 お蔵入り 第1版</a>
       </h1>
       <p style="color: #9da3af;">
         C89 3日目 東ム51b - O&#x27;Creilly
@@ -106,19 +106,19 @@
 
     <section id="spec" class="section">
       <div class="content">
-        <h2>詳説 お蔵入り 第1版</h2>
+        <h2>詳説 お蔵入り</h2>
         <p class="introduction">
           本書『詳説 お蔵入り』は，
 ブログなどに書きそびれて
 世に出せなかったノウハウを集めた書籍です．
         </p>
         <div class="jacket-image">
-          <img src="./imgs/circlecut.png" alt="詳説 お蔵入り">          </div>
+          <img src="./imgs/circlecut.png" alt="詳説 お蔵入り 第1版">          </div>
         <table class="table" id="spec-table">
           <tbody>
             <tr>
               <th>タイトル</th>
-              <td>詳説 お蔵入り</td>
+              <td>詳説 お蔵入り 第1版</td>
             </tr>
             <tr>
               <th>サークル</th>
@@ -145,7 +145,7 @@
      
         <ul class="social-buttons">
           <li class="social-button">
-            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="C89" data-text="O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="C89" data-text="O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り 第1版" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
           </li>
            
           <li class="social-button">
