Rename book image

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 世に出せなかったノウハウを集めた書籍です．
         </p>
         <div class="jacket-image">
-          <img src="./imgs/circlecut.png" alt="詳説 お蔵入り">          </div>
+          <img src="./imgs/book.png" alt="詳説 お蔵入り">          </div>
         <table class="table" id="spec-table">
           <tbody>
             <tr>
