--- a/index.html
+++ b/index.html
@@ -228,10 +228,18 @@
           </li>
            
           <li>
+            <span class="role">フルスタックな猫</span>
+            <span class="title">@FMS_Cat</span>
+            <span class="website">
+              <a href="https://twitter.com/FMS_Cat" target="_blank">Twitter</a>
+            </span>
+          </li>
+           
+          <li>
             <span class="role"></span>
             <span class="title">And more...</span>
           </li>
-                        </ul>
+                       </ul>
       </div>
     </section>
 
