--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Google Analytics -->
   <script type="text/javascript">
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', '']);
+    _gaq.push(['_setAccount', 'UA-71704333-1']);
     _gaq.push(['_trackPageview']);
     (function() {
       var ga = document.createElement('script');
