--- a/index.html
+++ b/index.html
@@ -190,11 +190,18 @@
            
           <li>
             <span class="number">04</span>
+            <span class="title">入門 オシロスコープ X-Yモード</span>
+            <span class="author">@FMS_Cat</span>
+            <span class="meta">オシロスコープのX-Yモードを利用した，絵を描き方を解説します．単純な円やリサジュー曲線をはじめとして，文字や3DCGの描画についても解説をします．また，様々なグラフィックを描画するだけでなく，聴覚的な変化の付け方についても解説をします．</span>
+          </li>
+           
+          <li>
+            <span class="number">05</span>
             <span class="title">And more...</span>
             <span class="author"></span>
             <span class="meta"></span>
           </li>
-                        </ol>
+                       </ol>
       </div>
     </section>
 
