--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
            
           <li>
             <span class="number">02</span>
-            <span class="title">初めての WindowsUserLogin</span>
+            <span class="title">初めての WindowsUserLogon</span>
             <span class="author">@kkrnt</span>
-            <span class="meta">Windowsにおけるユーザログインプロセスを紹介しつつ，あなただけの自由なログイン画面を作成するために必要なことを解説していきます．</span>
+            <span class="meta">Windowsにおけるユーザログオンプロセスを紹介しつつ，あなただけの自由なログオン画面を作成するために必要なことを解説していきます．</span>
           </li>
            
           <li>
