--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
     .list .website {
       margin-top: 5px;
     }
+    .store-list {
+      list-style-type: none;
+    }
+    .store-list img {
+      height: 3em;
+    }
   </style>
 </head>
 
@@ -140,9 +146,22 @@
               <th>価格</th>
               <td>500円</td>
             </tr>
-              </tbody>
+            <tr>
+              <th>オンライン頒布</th>
+              <td>
+                <ul class="store-list">
+                  <li>
+                    <a href="https://ocreilly.booth.pm/items/181677" target="_blank">
+                      <img src="./imgs/BOOTH.png" alt="BOOTH">
+                    </a>
+                  </li>
+                      
+                </ul>
+              </td>
+            </tr>
+          </tbody>
         </table>
-     
+
         <ul class="social-buttons">
           <li class="social-button">
             <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="C89" data-text="O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
