--- a/index.html
+++ b/index.html
@@ -151,12 +151,9 @@
               <td>
                 <ul class="store-list">
                   <li>
-                    <a href="https://ocreilly.booth.pm/items/181677" target="_blank">
-                      <img src="./imgs/BOOTH.png" alt="BOOTH">
-                    </a>
-                  </li>
-                      
-                </ul>
+                     調整中
+                                      </li>
+                  </ul>
               </td>
             </tr>
           </tbody>
