--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@
           </tbody>
         </table>
 
+        <div class="available">
+          <a href="./files/OCreilly_2015_Winter_Index.pdf" target="_blank">
+            <span class="available-btn btn btn-large">
+             目次サンプルはこちら
+                        </span>
+          </a>
+        </div>
+
         <ul class="social-buttons">
           <li class="social-button">
             <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="C89" data-text="O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り" data-url="http://ocreilly.meiji-ncc.tech/">Tweet</a>
