--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
   <meta property="og:title" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly" />
   <meta property="og:type" content="website" /> 
   <meta property="og:image" content="http://ocreilly.meiji-ncc.tech/imgs/header.png" /> 
-  <meta property="og:site_name" content="詳説 お蔵入り - O&#x27;Creilly" />
+  <meta property="og:site_name" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly" />
   <meta property="og:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@3846masa">
+  <meta name="twitter:title" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly">
+  <meta name="twitter:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
+  <meta name="twitter:image:src" content="http://ocreilly.meiji-ncc.tech/imgs/book.png">
 
   <link rel="stylesheet" href="//sanographix.github.io/public/tumblr/tokusetsu2/css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,300italic' rel='stylesheet' type='text/css'>
@@ -121,7 +127,7 @@
 世に出せなかったノウハウを集めた書籍です．
         </p>
         <div class="jacket-image">
-          <img src="./imgs/book.png" alt="詳説 お蔵入り">          </div>
+          <img src="http://ocreilly.meiji-ncc.tech/imgs/book.png" alt="詳説 お蔵入り">          </div>
         <table class="table" id="spec-table">
           <tbody>
             <tr>
