Change Twitter Card type

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <meta property="og:site_name" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly" />
   <meta property="og:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
 
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@3846masa">
   <meta name="twitter:title" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly">
   <meta name="twitter:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
-  <meta name="twitter:image:src" content="http://ocreilly.meiji-ncc.tech/imgs/book.png">
+  <meta name="twitter:image" content="http://ocreilly.meiji-ncc.tech/imgs/book.png">
 
   <link rel="stylesheet" href="//sanographix.github.io/public/tumblr/tokusetsu2/css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,300italic' rel='stylesheet' type='text/css'>
