--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
               <td>
                 <ul class="store-list">
                   <li>
-                     調整中
-                                      </li>
+                    <a href="https://ocreilly.booth.pm/items/181677" target="_blank">
+                      <img src="./imgs/BOOTH.png" alt="BOOTH">
+                    </a>
+                  </li>
                   </ul>
               </td>
             </tr>
