--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta name="twitter:image" content="http://ocreilly.meiji-ncc.tech/imgs/book.png">
 
   <link rel="stylesheet" href="//sanographix.github.io/public/tumblr/tokusetsu2/css/style.css" />
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,300italic' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,300italic' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="">
   <link rel="canonical" href="http://ocreilly.meiji-ncc.tech/" />
   <meta property="og:url" content="http://ocreilly.meiji-ncc.tech/" />
@@ -187,10 +187,10 @@
           </li>
            
           <li class="social-button">
-            <a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard-balloon" title="このエントリーをはてなブックマークに追加">
-              <img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" />
+            <a href="//b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard-balloon" title="このエントリーをはてなブックマークに追加">
+              <img src="//b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" />
             </a>
-            <script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+            <script type="text/javascript" src="//b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
           </li>
                    </ul>
 
@@ -291,7 +291,7 @@
   </footer>
 
   <script src="//sanographix.github.io/public/tumblr/tokusetsu2/js/tokusetsu2-js.min.js"></script>
-  <script src="http://jsoon.digitiminimi.com/js/widgetoon.js"></script>
+  <script src="//jsoon.digitiminimi.com/js/widgetoon.js"></script>
   <script>
     if (window.widgetoon_main) widgetoon_main();
     else {
