--- a/C89/index.html
+++ b/C89/index.html
@@ -19,7 +19,7 @@
 
   <meta property="og:title" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly" />
   <meta property="og:type" content="website" /> 
-  <meta property="og:image" content="https://ocreilly.meiji-ncc.tech/imgs/header.png" /> 
+  <meta property="og:image" content="https://ocreilly.meiji-ncc.tech/C89/imgs/header.png" /> 
   <meta property="og:site_name" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly" />
   <meta property="og:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
 
@@ -27,13 +27,13 @@
   <meta name="twitter:site" content="@3846masa">
   <meta name="twitter:title" content="詳説 お蔵入り - C89 3日目 東ム51b - O&#x27;Creilly">
   <meta name="twitter:description" content="C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します">
-  <meta name="twitter:image" content="https://ocreilly.meiji-ncc.tech/imgs/book.png">
+  <meta name="twitter:image" content="https://ocreilly.meiji-ncc.tech/C89/imgs/book.png">
 
   <link rel="stylesheet" href="//sanographix.github.io/public/tumblr/tokusetsu2/css/style.css" />
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,300italic' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="">
-  <link rel="canonical" href="https://ocreilly.meiji-ncc.tech/" />
-  <meta property="og:url" content="https://ocreilly.meiji-ncc.tech/" />
+  <link rel="canonical" href="https://ocreilly.meiji-ncc.tech/C89/" />
+  <meta property="og:url" content="https://ocreilly.meiji-ncc.tech/C89/" />
 
   <!--[if lt IE 9]>
     <script src="//sanographix.github.io/public/tumblr/tokusetsu2/js/html5shiv.js"></script>
@@ -112,7 +112,7 @@
   <!-- ここから Index ページ -->
 
   <section id="header-image">
-    <div class="header-image-content" style="background-image:url('https://ocreilly.meiji-ncc.tech/imgs/header.png');"></div>
+    <div class="header-image-content" style="background-image:url('https://ocreilly.meiji-ncc.tech/C89/imgs/header.png');"></div>
     <div class="header-image-mask"></div>
   </section>
 
@@ -127,7 +127,7 @@
 世に出せなかったノウハウを集めた書籍です．
         </p>
         <div class="jacket-image">
-          <img src="https://ocreilly.meiji-ncc.tech/imgs/book.png" alt="詳説 お蔵入り">          </div>
+          <img src="https://ocreilly.meiji-ncc.tech/C89/imgs/book.png" alt="詳説 お蔵入り">          </div>
         <table class="table" id="spec-table">
           <tbody>
             <tr>
@@ -179,11 +179,11 @@
 
         <ul class="social-buttons">
           <li class="social-button">
-            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="C89" data-text="O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り" data-url="https://ocreilly.meiji-ncc.tech/">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="C89" data-text="O&#x27;Creilly - C89 3日目 東ム51b - 詳説 お蔵入り" data-url="https://ocreilly.meiji-ncc.tech/C89/">Tweet</a>
           </li>
            
           <li class="social-button">
-            <div class="fb-like" data-url="https://ocreilly.meiji-ncc.tech/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+            <div class="fb-like" data-url="https://ocreilly.meiji-ncc.tech/C89/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
           </li>
            
           <li class="social-button">
